@@ -736,7 +736,7 @@ public class AccountingInvoiceDAO {
 			
 			// Si sólo tiene un vencimiento y está pendiente, se actualiza el importe para que sea igual al total factura 
 			if (accInvoice.getInvoice().getFinances() != null && accInvoice.getInvoice().getFinances().size() == 1) {
-				Finance finance = accInvoice.getInvoice().getFinances().getFirst();
+				Finance finance = accInvoice.getInvoice().getFinances().get(0);
 				if (finance.isPending() && !AonNumberUtils.equals(accInvoice.getInvoice().getTotal(),finance.getAmount())) {
 					finance.setAmount(accInvoice.getInvoice().getTotal())
 						.setDirty(true);
